# farrowandball

./: .gitignore  DESCRIPTION  LICENSE  NAMESPACE  Pipfile  README.Rmd  README.html  README.md  index.Rmd  index.html  index.md  setup.cfg
R/: fb.R
examples/: chart_example.py  colormap_gradients.py  matplotlib_example.py
man/: plotpal.Rd  scale_color_fb.Rd  scale_fill_fb.Rd
src/farrow_and_ball/: __init__.py  palettes.py
styles/: minimal.mplstyle
