[metadata]
name = farrow-and-ball
version = 0.0.1
author = Mark Boss
author_email = hello@markboss.me
description = Port of the R farrowandball palette implementation.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/vork/farrowandball
project_urls =
    Bug Tracker = https://github.com/vork/farrowandball/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = farrow_and_ball
packages = find:
python_requires = >=3
install_requires =
    enum34;python_version<'3.4'
    matplotlib

[options.packages.find]
where = farrow_and_ball