[metadata]
name = farrow-and-ball
version = 0.0.3
author = Mark Boss
author_email = hello@markboss.me
description = Port of the R farrowandball palette implementation.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/vork/farrowandball
project_urls =
    Bug Tracker = https://github.com/vork/farrowandball/issues
    Source = https://github.com/vork/farrowandball
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
keywords = matplotlib, colormap, palette

[options]
package_dir =
    = src
packages = find:
python_requires = >=3
install_requires =
    enum34;python_version<'3.4'
    matplotlib

[options.packages.find]
where = src